--- a/src/sections/contact/Contact.css
+++ b/src/sections/contact/Contact.css
@@ -95,4 +95,9 @@ iframe {
   .contact-map {
     margin: 0px;
   }
+
+  .contact-form {
+    margin-left: 30px;
+
+  }
 }
